# core-lens

./: .buildinfo  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SKILLS.md  concepts.html  export.html  genindex.html  index.html  intro.html  logging.html  objects.inv  plots.html  plugins.html  py-modindex.html  pyproject.toml  queries.html  quickstart.html  search.html  searchindex.js  stats.html
.doctrees/: concepts.doctree  environment.pickle  export.doctree  index.doctree  intro.doctree  logging.doctree  plots.doctree  plugins.doctree  queries.doctree  quickstart.doctree  stats.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/core_lens/: index.doctree
.doctrees/autoapi/core_lens/__main__/: index.doctree
.doctrees/autoapi/core_lens/aoi/: index.doctree
.doctrees/autoapi/core_lens/base/: index.doctree
.doctrees/autoapi/core_lens/base/entity/: index.doctree
.doctrees/autoapi/core_lens/base/namespaces/: index.doctree
.doctrees/autoapi/core_lens/base/namespaces/plot/: index.doctree
.doctrees/autoapi/core_lens/base/namespaces/stats/: index.doctree
.doctrees/autoapi/core_lens/base/result/: index.doctree
.doctrees/autoapi/core_lens/base/view/: index.doctree
.doctrees/autoapi/core_lens/entities/: index.doctree
.doctrees/autoapi/core_lens/entities/mws/: index.doctree
.doctrees/autoapi/core_lens/entities/tehsil/: index.doctree
.doctrees/autoapi/core_lens/entities/waterbody/: index.doctree
.doctrees/autoapi/core_lens/export/: index.doctree
.doctrees/autoapi/core_lens/export/formats/: index.doctree
.doctrees/autoapi/core_lens/schema/: index.doctree
.doctrees/autoapi/core_lens/schema/detection/: index.doctree
.doctrees/autoapi/core_lens/schema/profile/: index.doctree
.doctrees/autoapi/core_lens/utils/: index.doctree
.doctrees/autoapi/core_lens/utils/polars_utils/: index.doctree
.doctrees/autoapi/core_lens/utils/season/: index.doctree
.doctrees/autoapi/core_lens/utils/spatial/: index.doctree
.github/: pull_request_template.md
.github/workflows/: ci.yml  gh-pages.yml  pre-release.yml  release.yml
_sources/: export.md.txt  index.rst.txt  logging.md.txt  queries.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/core_lens/: index.rst.txt
_sources/autoapi/core_lens/__main__/: index.rst.txt
_sources/autoapi/core_lens/aoi/: index.rst.txt
_sources/autoapi/core_lens/base/: index.rst.txt
_sources/autoapi/core_lens/base/entity/: index.rst.txt
_sources/autoapi/core_lens/base/namespaces/: index.rst.txt
_sources/autoapi/core_lens/base/namespaces/plot/: index.rst.txt
_sources/autoapi/core_lens/base/namespaces/stats/: index.rst.txt
_sources/autoapi/core_lens/base/result/: index.rst.txt
_sources/autoapi/core_lens/base/view/: index.rst.txt
_sources/autoapi/core_lens/entities/: index.rst.txt
_sources/autoapi/core_lens/entities/mws/: index.rst.txt
_sources/autoapi/core_lens/entities/tehsil/: index.rst.txt
_sources/autoapi/core_lens/entities/waterbody/: index.rst.txt
_sources/autoapi/core_lens/export/: index.rst.txt
_sources/autoapi/core_lens/export/formats/: index.rst.txt
_sources/autoapi/core_lens/schema/: index.rst.txt
_sources/autoapi/core_lens/schema/detection/: index.rst.txt
_sources/autoapi/core_lens/schema/profile/: index.rst.txt
_sources/autoapi/core_lens/utils/: index.rst.txt
_sources/autoapi/core_lens/utils/polars_utils/: index.rst.txt
_sources/autoapi/core_lens/utils/season/: index.rst.txt
_sources/autoapi/core_lens/utils/spatial/: index.rst.txt
autoapi/: index.html
autoapi/core_lens/: index.html
autoapi/core_lens/__main__/: index.html
autoapi/core_lens/aoi/: index.html
autoapi/core_lens/base/: index.html
autoapi/core_lens/base/entity/: index.html
autoapi/core_lens/base/namespaces/: index.html
autoapi/core_lens/base/namespaces/plot/: index.html
autoapi/core_lens/base/namespaces/stats/: index.html
autoapi/core_lens/base/result/: index.html
autoapi/core_lens/base/view/: index.html
autoapi/core_lens/entities/: index.html
autoapi/core_lens/entities/mws/: index.html
autoapi/core_lens/entities/tehsil/: index.html
autoapi/core_lens/entities/waterbody/: index.html
autoapi/core_lens/export/: index.html
autoapi/core_lens/export/formats/: index.html
autoapi/core_lens/schema/: index.html
autoapi/core_lens/schema/detection/: index.html
autoapi/core_lens/schema/profile/: index.html
autoapi/core_lens/utils/: index.html
autoapi/core_lens/utils/polars_utils/: index.html
autoapi/core_lens/utils/season/: index.html
autoapi/core_lens/utils/spatial/: index.html
docs/source/: concepts.md  conf.py  index.rst  intro.md  plots.md  plugins.md  queries.md  quickstart.md  stats.md
docs/source/autoapi/: index.rst
docs/source/autoapi/core_lens/: index.rst
docs/source/autoapi/core_lens/_version/: index.rst
examples/: demo_mws.py  demo_tehsil.py
hooks/: mypy.sh  no-parquet-outside-fixtures.sh  pytest.sh
src/core_lens/: __init__.py  __main__.py  aoi.py
src/core_lens/base/: __init__.py  entity.py  result.py  view.py
src/core_lens/base/namespaces/: __init__.py  plot.py  stats.py
src/core_lens/entities/: __init__.py  mws.py  tehsil.py  waterbody.py
src/core_lens/export/: __init__.py  formats.py
src/core_lens/schema/: __init__.py  detection.py  profile.py
src/core_lens/utils/: __init__.py  polars_utils.py  season.py  spatial.py
tests/fixture/data/mws/: annual.parquet  fortnightly.parquet  static.parquet
tests/fixtures/: generate_fixtures.py
tests/fixtures/data/tehsil/: static.parquet
tests/unit/: conftest.py  test_aoi.py  test_entities.py  test_entity.py  test_export.py  test_main.py  test_plot.py  test_polars_utils.py  test_profile.py  test_result.py  test_schema_detection.py  test_schema_profile.py  test_season.py  test_season_config.py  test_spatial.py  test_stats.py  test_view.py
