[project]
name = "core-lens"
dynamic = ["version"]
description = "Query, analyse, and visualise CoreStack's microwatershed and Earth science data through a clean, composable Python API."
readme = "README.md"
authors = [{ name = "Apoorva Kashyap" }]
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ApoorvaKashyap/core-lens"
Issues = "https://github.com/ApoorvaKashyap/core-lens/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/core_lens/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/core_lens"]

[tool.pyright]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[project.optional-dependencies]
core = ["polars>=1.40.1,<2", "pyarrow>=24.0.0,<25", "pydantic>=2.13.3,<3"]
spatial = [
    "core-lens[core]",
    "duckdb>=1.5.3,<2",
    "geopandas>=1.1.3,<2",
    "shapely>=2.1.2,<3",
    "pyproj>=3.7.2,<4",
]
viz = [
    "core-lens[core]",
    "lonboard>=0.16.0,<1",
    "matplotlib>=3.10.9,<4",
    "plotly>=6.7.0,<7",
]
stats = ["core-lens[core]", "scipy>=1.17.1,<2", "statsmodels>=0.14.6,<1"]
full = ["core-lens[spatial,viz,stats]"]

[dependency-groups]
dev = [
    "faker>=40.21.0",
    "mypy>=1.20.2",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.12",
    "twine>=6.2.0",
]
types = ["types-geopandas>=1.1.3.20260518", "types-shapely>=2.1.0.20260518"]
docs = [
    "myst-parser>=5.1.0",
    "shibuya>=2026.5.19",
    "sphinx>=9.1.0",
    "sphinx-autoapi>=3.8.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
]


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true
